--- a/Rebus.Kafka/Rebus.Kafka.csproj
+++ b/Rebus.Kafka/Rebus.Kafka.csproj
@@ -6,15 +6,15 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageId>Rebus.Kafka</PackageId>
     <Description>Apache Kafka transport for Rebus.
-So as to interact with the Apache Kafka requires the unmanaged “librdkafka”, you need to install the package “librdkafka.redist -Version 1.0.0-RC7 or newer”. If this unmanaged “librdkafka” is not found automatically, you must load it before you can use Rebus.Kafka for the first time as follows: "Library.Load (pathToLibrd)".</Description>
+So as to interact with the Apache Kafka requires the unmanaged “librdkafka”, you need to install the package “librdkafka.redist -Version 1.0.0-RC7 or newer”. If this unmanaged “librdkafka” is not found automatically, you must load it before you can use Rebus.Kafka for the first time as follows: "Confluent.Kafka.Library.Load (pathToLibrdkafka)".</Description>
     <PackageTags>messaging, rebus, queue, service, bus, Kafka, Confluent, librdkafka</PackageTags>
     <Company />
-    <Version>0.1.6</Version>
+    <Version>0.1.8</Version>
     <PackageLicenseUrl>https://raw.githubusercontent.com/rebus-org/Rebus/master/LICENSE.md</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/glazkovalex/Rebus.Kafka</PackageProjectUrl>
     <PackageIconUrl>https://raw.githubusercontent.com/glazkovalex/Rebus.Kafka/master/image.png</PackageIconUrl>
-    <AssemblyVersion>0.1.6.0</AssemblyVersion>
-    <FileVersion>0.1.6.0</FileVersion>
+    <AssemblyVersion>0.1.8.0</AssemblyVersion>
+    <FileVersion>0.1.8.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
