--- a/Examples/KafkaAsOneWayTransport/KafkaAsOneWayTransport.csproj
+++ b/Examples/KafkaAsOneWayTransport/KafkaAsOneWayTransport.csproj
@@ -5,6 +5,10 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DefineConstants>TRACE;DEBUG</DefineConstants>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Rebus.Autofac" Version="5.2.0" />
   </ItemGroup>
