--- a/Rebus.Kafka/Rebus.Kafka.csproj
+++ b/Rebus.Kafka/Rebus.Kafka.csproj
@@ -9,12 +9,12 @@
 So as to interact with the Apache Kafka requires the unmanaged “librdkafka”, you need to install the package “librdkafka.redist -Version 1.0.0-RC7 or newer”. If this unmanaged “librdkafka” is not found automatically, you must load it before you can use Rebus.Kafka for the first time as follows: "Confluent.Kafka.Library.Load (pathToLibrdkafka)".</Description>
     <PackageTags>messaging, rebus, queue, service, bus, Kafka, Confluent, librdkafka</PackageTags>
     <Company />
-    <Version>0.4.1</Version>
+    <Version>0.4.2</Version>
     <PackageLicenseUrl>https://raw.githubusercontent.com/rebus-org/Rebus/master/LICENSE.md</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/glazkovalex/Rebus.Kafka</PackageProjectUrl>
     <PackageIconUrl>https://raw.githubusercontent.com/glazkovalex/Rebus.Kafka/master/image.png</PackageIconUrl>
-    <AssemblyVersion>0.4.1.0</AssemblyVersion>
-    <FileVersion>0.4.1.0</FileVersion>
+    <AssemblyVersion>0.4.2.0</AssemblyVersion>
+    <FileVersion>0.4.2.0</FileVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -26,11 +26,11 @@ So as to interact with the Apache Kafka requires the unmanaged “librdkafka”,
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Confluent.Kafka" Version="1.0.0-beta3" />
+    <PackageReference Include="Confluent.Kafka" Version="1.0.0-RC1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <PackageReference Include="Rebus" Version="5.2.1" />
-    <PackageReference Include="System.Reactive.Linq" Version="4.1.2" />
+    <PackageReference Include="System.Reactive.Linq" Version="4.1.3" />
   </ItemGroup>
 
 </Project>
