--- a/Examples/Scaleout.Producer/Scaleout.Producer.csproj
+++ b/Examples/Scaleout.Producer/Scaleout.Producer.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Confluent.Kafka" Version="1.0.0-RC7" />
+    <PackageReference Include="Confluent.Kafka" Version="1.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="2.0.4" />
