--- a/Rebus.Kafka.Tests/Rebus.Kafka.Tests.csproj
+++ b/Rebus.Kafka.Tests/Rebus.Kafka.Tests.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Docker.DotNet" Version="3.125.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1" />
     <PackageReference Include="Rebus.Autofac" Version="5.2.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
