--- a/Rebus.Kafka/Rebus.Kafka.csproj
+++ b/Rebus.Kafka/Rebus.Kafka.csproj
@@ -9,12 +9,10 @@
 So as to interact with the Apache Kafka requires the unmanaged "librdkafka", you need to install the appropriate version of the package "librdkafka.redist". If this unmanaged "librdkafka" is not found automatically, you must load it before you can use Rebus.Kafka for the first time as follows: "Confluent.Kafka.Library.Load (pathToLibrdkafka)".</Description>
     <PackageTags>messaging, rebus, queue, service, bus, Kafka, Confluent, librdkafka</PackageTags>
     <Company />
-    <Version>1.4.3</Version>
+    <Version>1.5.1</Version>
     <PackageLicenseUrl>https://raw.githubusercontent.com/rebus-org/Rebus/master/LICENSE.md</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/glazkovalex/Rebus.Kafka</PackageProjectUrl>
     <PackageIconUrl>https://raw.githubusercontent.com/glazkovalex/Rebus.Kafka/master/image.png</PackageIconUrl>
-    <AssemblyVersion>1.4.3.0</AssemblyVersion>
-    <FileVersion>1.4.3.0</FileVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -30,10 +28,11 @@ So as to interact with the Apache Kafka requires the unmanaged "librdkafka", you
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Confluent.Kafka" Version="1.4.3" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.3" />
+    <PackageReference Include="Confluent.Kafka" Version="1.5.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.7" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.7" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="Rebus" Version="6.2.1" />
+    <PackageReference Include="Rebus" Version="6.3.1" />
     <PackageReference Include="System.Reactive.Linq" Version="4.4.1" />
   </ItemGroup>
 
