Improving data transfer efficiency; The format of transport messages has changed; Refactoring for the current version of Apache Kafka "confluentinc/cp-kafka:7.0.1"; Create topics if ConsumerConfig.AllowAutoCreateTopics == true! ; Add ErrorHandler tests;

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,7 @@ obj
 /Rebus.Kafka/Rebus.Kafka.xml
 /TestResults
 /.vs/Rebus
+/.vs/ProjectEvaluation/rebus.metadata.v5.2
+/.vs/ProjectEvaluation/rebus.projects.v5.2
+/.vs/ProjectEvaluation/rebus.metadata.v7.bin
+/.vs/ProjectEvaluation/rebus.projects.v7.bin
