Changed the folder structure

--- a/Examples/IdempotentSaga/IdempotentSaga.csproj
+++ b/Examples/IdempotentSaga/IdempotentSaga.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Rebus.Kafka\Rebus.Kafka.csproj" />
+    <ProjectReference Include="..\..\Rebus.Kafka\Rebus.Kafka.csproj" />
   </ItemGroup>
 
 </Project>
