--- a/Examples/TwoBusInHost/TwoBusInHost.csproj
+++ b/Examples/TwoBusInHost/TwoBusInHost.csproj
@@ -12,8 +12,8 @@
     <PackageReference Include="Rebus.ServiceProvider" Version="10.0.0" />
   </ItemGroup>  
   <ItemGroup>
-    <ProjectReference Include="..\Examples\Scaleout.Messages\Scaleout.Messages.csproj" />
-    <ProjectReference Include="..\Rebus.Kafka\Rebus.Kafka.csproj" />
+    <ProjectReference Include="..\..\Examples\Scaleout.Messages\Scaleout.Messages.csproj" />
+    <ProjectReference Include="..\..\Rebus.Kafka\Rebus.Kafka.csproj" />
   </ItemGroup>
 
 </Project>
