--- a/Rebus.Kafka.NTests/Rebus.Kafka.NTests.csproj
+++ b/Rebus.Kafka.NTests/Rebus.Kafka.NTests.csproj
@@ -16,17 +16,20 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
-    <PackageReference Include="NUnit" Version="3.14.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
+    <PackageReference Include="NUnit" Version="4.1.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
-    <PackageReference Include="NUnit.Analyzers" Version="3.10.0">
+    <PackageReference Include="NUnit.Analyzers" Version="4.1.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.Playwright.NUnit" Version="1.41.2" />
-    <PackageReference Include="coverlet.collector" Version="6.0.0" />
-    <PackageReference Include="rebus.tests.contracts" Version="8.0.1" />
-    <PackageReference Include="Testcontainers.Kafka" Version="3.7.0" />
+    <PackageReference Include="Microsoft.Playwright.NUnit" Version="1.42.0" />
+    <PackageReference Include="coverlet.collector" Version="6.0.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="rebus.tests.contracts" Version="8.2.6" />
+    <PackageReference Include="Testcontainers.Kafka" Version="3.8.0" />
   </ItemGroup>
 
   <ItemGroup>
