--- a/SchemaRegistry/SchemaRegistry.csproj
+++ b/SchemaRegistry/SchemaRegistry.csproj
@@ -1,4 +1,5 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
@@ -10,7 +11,7 @@
     <PackageReference Include="Rebus.ServiceProvider" Version="10.3.0" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Examples\Scaleout.Messages\Scaleout.Messages.csproj" />
-    <ProjectReference Include="..\..\Rebus.Kafka\Rebus.Kafka.csproj" />
+    <ProjectReference Include="..\Rebus.Kafka\Rebus.Kafka.csproj" />
   </ItemGroup>
+
 </Project>
